# split-it

./: .gitignore  QAprompt.py  QAprompt.txt  README.md  app.py  main.py  paser.py  pyproject.toml  split-it.icns  split-it.spec
.github/workflows/: build.yml
